--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+beautifulsoup4 = "*"
+google = "*"
+spacy = "*"
 
 [dev-packages]
+jupyter = "*"
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
