--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 beautifulsoup4 = "*"
 google = "*"
 spacy = "*"
+langchain = "*"
+langchain-openai = "*"
+python-dotenv = "*"
 
 [dev-packages]
 jupyter = "*"
