Initial POC glassdoor, about to refactor some

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ python-dotenv = "*"
 praw = "*"
 markdown = "*"
 Jinja2 = "*"
+loguru = "*"
+scrapfly-sdk = {extras = ["all"]}
 
 [dev-packages]
 jupyter = "*"
