Mostly working Indeed proof of concept

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ Jinja2 = "*"
 loguru = "*"
 scrapfly-sdk = {extras = ["all"]}
 google-api-python-client = "*"
+markdownify = "*"
 
 [dev-packages]
 jupyter = "*"
