Getting it working. News summary test was 67s fresh, 0s cached

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ google = "*"
 spacy = "*"
 langchain = "*"
 langchain-openai = "*"
+langchain-community = "*"
 python-dotenv = "*"
 praw = "*"
 markdown = "*"
