Committing before I start deleting in the migration to newspaper4k

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ google-api-python-client = "*"
 markdownify = "*"
 requests-cache = "*"
 pytz = "*"
+newspaper4k = "*"
 
 [dev-packages]
 jupyter = "*"
