Adding tests for review sampling reliability

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,8 @@ app-store-web-scraper = "*"
 google-play-scraper = "*"
 diskcache = "*"
 boto3 = "*"
+scipy = "*"
+numpy = "*"
 
 [dev-packages]
 jupyter = "*"
