Trying out some things to spot dead deps

--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,10 @@ jupyter = "*"
 ipykernel = "*"
 diagrams = "*"
 pytest = "*"
+pipenv-check = "*"
 
 [requires]
 python_version = "3.10"
+
+[scripts]
+check-dependencies = "pipenv-check"
