Ok finally the path stuff works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
     ],
     "cSpell.words": [
         "scrapfly"
-    ]
+    ],
+    "python.envFile": "${workspaceFolder}/.env",
+    "jupyter.notebookFileRoot": "${workspaceFolder}/src"
 }
