Fixing glassdoor test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         }
     ],
     "cSpell.words": [
+        "airtable",
         "scrapfly"
     ],
     "python.envFile": "${workspaceFolder}/.env",
