--- a/Pipfile
+++ b/Pipfile
@@ -47,3 +47,4 @@ python_version = "3.10"
 [scripts]
 check-dependencies = "pipenv-check"
 find-dead-code = "vulture --ignore-names 'test_*' src/"
+build-website = "python build_website.py ../output/data ../docs"
