Moving the data refresh pipeline over to a script

--- a/Pipfile
+++ b/Pipfile
@@ -48,3 +48,4 @@ python_version = "3.10"
 check-dependencies = "pipenv-check"
 find-dead-code = "vulture --ignore-names 'test_*' src/"
 build-website = "python build_website.py ../output/data ../docs"
+refresh-data = "python refresh_data.py ../output/data"
