Switch to asyncpraw in Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,6 @@ langchain = "*"
 langchain-openai = "*"
 langchain-community = "*"
 python-dotenv = "*"
-praw = "*"
 markdown = "*"
 Jinja2 = "*"
 loguru = "*"
@@ -32,6 +31,7 @@ eli5 = "*"
 pandas = "*"
 pyairtable = "*"
 haralyzer = "*"
+asyncpraw = "*"
 
 [dev-packages]
 jupyter = "*"
