--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,17 +30,15 @@ dependencies = [
 ]
 
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "black",
     "diagrams",
+    "eli5",
+    "haralyzer",
     "ipykernel",
     "jupyter",
     "pytest",
+    "scikit-learn",
     "vulture"
-]
-experimental = [
-    "eli5",
-    "haralyzer",
-    "scikit-learn"
 ]
