--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langchain-openai",
     "loguru",
     "markdown",
+    "markdownify",
     "newspaper4k",
     "numpy",
     "pandas",
