Trying out doctest

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ pythonpath = src
 testpaths = src
 filterwarnings =
     ignore::DeprecationWarning:_pytest.assertion.rewrite
+addopts = --doctest-modules
